--- a/package.json
+++ b/package.json
@@ -1,15 +1,39 @@
 {
   "name": "spectral",
-  "productName": "spectral",
+  "productName": "Spectral",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "spectral",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "build": "electron-builder"
+  },
+  "build": {
+    "appId": "com.spectral.id",
+    "productName": "Spectral",
+    "files": [
+      "src/**/*",
+      "node_modules/**/*",
+      "resources/**/*",
+      "main.js",
+      "package.json"
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "portable",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ],
+      "icon": "resources/icon.ico"
+    }
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -20,13 +44,9 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "30.0.9"
+    "electron": "30.0.9",
+    "electron-builder": "^24.13.3"
   },
-  "keywords": [],
-  "author": {
-    "name": "iSnowden"
-  },
-  "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^9.0.0",
