--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spectral",
   "productName": "Spectral",
   "version": "1.0.0",
-  "description": "spectral",
+  "description": "Change your status to appear offline to your friends in the League of Legends client.",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
