--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spectral",
   "productName": "Spectral",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Change your status to appear offline to your friends in the League of Legends client.",
   "main": "src/index.js",
   "scripts": {
@@ -33,7 +33,14 @@
         }
       ],
       "icon": "resources/icon.ico"
-    }
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "iSnowden",
+        "repo": "spectral"
+      }
+    ]
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
