--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "build": {
     "appId": "com.isnowden.spectral",
+    "artifactName": "${productName}.${ext}",
     "productName": "Spectral",
     "files": [
       "src/**/*",
