--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spectral",
   "productName": "Spectral",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Change your status to appear offline to your friends in the League of Legends client.",
   "main": "src/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "build": {
     "appId": "com.isnowden.spectral",
+    "author": "iSnowden",
     "artifactName": "${productName}.${ext}",
     "productName": "Spectral",
     "files": [
